# needle-drop-mcp

./: .gitignore  BACKLOG.md  README.md  conftest.py  pyproject.toml
.github/workflows/: docs.yml
docs/superpowers/plans/: 2026-06-15-needledrop-analysis.md  2026-06-15-needledrop-apple-connector.md  2026-06-15-needledrop-catalog-browse.md  (+9 more)
src/needledrop/: __init__.py  cli.py  config.py  discography.py  keystore.py  mcp_server.py
tests/: test_cli.py  test_cli_auth.py  test_cli_mcp.py  test_cli_serve.py  test_cli_sync.py  test_config.py  test_config_mb.py  test_discography.py  test_keystore.py  test_mcp_server.py  test_version.py
tests/analysis/: test_compilation_pollution.py  test_duplicate_tracks.py  test_duplicates.py  test_missing_albums.py  test_partial_albums.py  test_single_replaced.py
tests/connectors/: test_apple_auth.py  test_apple_credentials.py  test_apple_models.py  test_apple_music.py  test_apple_token.py  test_base.py
tests/db/: test_duckdb_store.py  test_migrations.py  test_repository.py
tests/matching/: test_matcher.py  test_scoring.py
tests/models/: test_canonical.py  test_enums.py  test_findings.py  test_match.py
tests/musicbrainz/: test_dumps.py  test_dumps_io.py  test_import_integration.py  test_importer.py  test_materialize.py  test_postgres.py  test_postgres_lifecycle.py  test_schema_sql.py
tests/normalize/: test_album_versions.py  test_artists.py  test_text.py
tests/services/: test_cleanup.py  test_sync.py
website/: .npmrc  docusaurus.config.js  package-lock.json  package.json
website/docs/: architecture.md  index.md
(+42 files in other folders)
