[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "needledrop"
version = "0.1.0"
description = "An MCP server for intelligent music library management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "duckdb",
    "pydantic>=2",
    "pydantic-settings",
    "httpx",
    "orjson",
    "rapidfuzz",
    "rich",
    "typer",
    "keyring",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/needledrop"]

[tool.hatch.build.targets.wheel.force-include]
"src/needledrop/db/schema.sql" = "needledrop/db/schema.sql"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
